--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,6 +21,40 @@
     justify-content: space-between;
 }
 
+.loading {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    border: 5px solid tomato;
+    border-bottom: 0;
+    border-right: 0;
+    animation: roll .8s ease infinite;
+    position: relative;
+    left: 50%;
+}
+
+@keyframes roll {
+    0% {
+        transform: rotate(45deg);
+    }
+
+    25% {
+        transform: rotate(90deg);
+    }
+
+    50% {
+        transform: rotate(180deg);
+    }
+
+    75% {
+        transform: rotate(270deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 .flex-item {
     background: tomato;
     padding: 5px;
@@ -33,4 +67,12 @@
     font-weight: bold;
     font-size: 3em;
     text-align: center;
+}
+
+.card-action {
+    font-size: 12px;
+}
+
+nav {
+    margin-bottom: 40px;
 }
